src/app/roadmap-view/roadmap-view.component.scss
@use 'index' as *;

:host {
  display: block;
  width: 223px;
  border-radius: 10px;
  background: #FFF;
  padding: 19px 24px 24px;

  @include desktop {
    width: 255px;
  }
}

.top {
  display: flex;
  justify-content: space-between;
  align-items: center;

  h1 {
    // Typography
    color: #3A4374;
    font-size: 18px;
    font-weight: 700;
    letter-spacing: -0.25px;
  }

  a {
    color: #4661E6;
    font-size: 13px;
    font-weight: 600;

    &:is(:hover, :focus-visible) {
      color: #8397F8;
    }
  }
}

ol {
  margin-top: 24px;

  li {
    position: relative;

    // Typography
    color: #647196;
    font-size: 16px;

    .count {
      position: absolute;
      right: 0;

      // Typography
      color: #647196;
      font-size: 16px;
      font-weight: 700;
    }

    .disc {
      display: inline-block;
      width: 8px;
      height: 8px;
      border-radius: 50%;
      margin-right: 16px;
    }

    @for $i from 1 through 3 {
      &:nth-child(#{$i})>.disc {
        background: nth(#F49F85 #AD1FEA #62BCFA, $i);
      }
    }
  }
}

